[gd_scene load_steps=3 format=3 uid="uid://ctffniow4arsc"]

[ext_resource type="Texture2D" uid="uid://ct7uy4xu6bynv" path="res://resources/enemies/zombie/zombie_head_00001.png" id="1"]
[ext_resource type="Script" uid="uid://yp1nb7prjgiv" path="res://scenes/enemies/zombie/head_phs.gd" id="2"]

[node name="head_phs" type="RigidBody2D"]
position = Vector2(571, 333)
collision_layer = 0
collision_mask = 4
mode = 1
sleeping = true
can_sleep = false
angular_velocity = 10.0
applied_force = Vector2(300, 0)
applied_torque = 13000.0
script = ExtResource("2")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(16, -47, 44, -10, 23, 48, -35, 51, -51, 0, -34, -41)

[node name="head" type="Sprite2D" parent="."]
texture = ExtResource("1")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="fadetimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_head_phs_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="fadetimer" to="." method="_on_fadetimer_timeout"]
